# rbpf

./: .gitignore  Cargo.toml  Dockerfile.debbuild  Dockerfile.frontend  Dockerfile.pkgbuild  Dockerfile.rpmbuild  Dockerfile.rust  Dockerfile.rustbuild  Dockerfile.rustbuild.arm  Dockerfile.rustbuild.x86_64  Dockerfile.vuebuild  LICENSE.md  Makefile  README.md  build.sh  deny.toml
.github/workflows/: license-check.yml  package-release.yml
contrib/: rbpf.service  settings.yaml
contrib/docker/: Dockerfile.license.check  Dockerfile.node  Dockerfile.pkgbuild  Dockerfile.rpmbuild  Dockerfile.rust.aarch64.elf  Dockerfile.rust.arm.ebpf  Dockerfile.rust.arm.elf  Dockerfile.rust.mips  Dockerfile.rust.x86_64  Dockerfile.rustbuild.aarch64  Dockerfile.rustbuild.arm  Dockerfile.rustbuild.x86_64  Dockerfile.xtask  docker-compose.infra.yaml
contrib/migrations/: 0001_init.sql  0002_rename_uindex.sql
contrib/pkg/: PKGBUILD  build-deb.sh  build-rpm.sh  rbpf.install
contrib/pkg/debian/DEBIAN/: control
contrib/pkg/rpm/: rbpf.spec
contrib/rules/: ban_ipv6_localhost.yaml  ban_opennet.ru.yaml  ban_port_range.yaml  ban_ya.ru.yaml  example_1.yaml  example_2.yaml  ok_google_dns.yaml
contrib/settings/: http.yaml  main.yaml
contrib/systemd/: rbpf-http.service  rbpf-loader.service
docs/: build.md  http.md  loader.md  rules.md  screens.md
rbpf/: Cargo.toml
rbpf-common/: Cargo.toml
rbpf-common/src/: lib.rs  logs.rs  rules.rs
rbpf-ebpf/: Cargo.toml  build.rs
rbpf-ebpf/src/: events.rs  filter.rs  lib.rs  logs.rs  main.rs  rules.rs
rbpf-ebpf/src/filter/: v4.rs  v6.rs
rbpf-ebpf/src/ip/: ipproto.rs  mod.rs  parser_result.rs  v4.rs  v6.rs
rbpf-ebpf/src/rules/: mod.rs  rule.rs  v4.rs  v6.rs
rbpf-http/: Cargo.toml  build.rs
rbpf-http/src/: http.rs  lib.rs  main.rs  settings.rs  websocket.rs
rbpf-loader/: Cargo.toml  build.rs
rbpf-loader/src/: control.rs  database.rs  elasticsearch.rs  ipproto.rs  lib.rs  logs.rs  main.rs  rules.rs  settings.rs
rbpf-ui/: .env  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
rbpf-ui/src/: main.ts
rbpf-ui/src/api/: rulesApi.ts
rbpf-ui/src/components/: Navigation.vue  RuleDialog.vue  RuleEditAddress.vue  RuleRow.vue  TheWelcome.vue
rbpf-ui/src/router/: index.ts
rbpf-ui/src/store/: index.ts  logs.ts
rbpf-ui/src/store/modules/: logs.ts  rules.ts
rbpf-ui/src/views/: LogsView.vue  RulesView.vue
rbpf/src/: control.rs  events.rs  http.rs  lib.rs  logs.rs  main.rs  rules.rs  settings.rs
rbpf/src/loader/: helpers.rs  mod.rs  v4.rs  v6.rs
xtask/: Cargo.toml
xtask/src/: archive.rs  binaries.rs  cache.rs  clean.rs  docker.rs  fs_ext.rs  main.rs  packages.rs  vue.rs
