[package]
name = "rbpf-common"
version = "0.1.1"
edition = "2021"

[features]
default = []
user = ["aya", "serde", "yaml-rust2", "rand", "poem-openapi", "libc"]

[dependencies]
aya = { workspace = true, optional = true }
serde = { version = "1.0.219", optional = true }
yaml-rust2 =  { version = "0.10.1", optional = true }
rand =  { version = "0.9.0", optional = true }
poem-openapi = { version = "5.1.12", features = ["swagger-ui"], optional = true }
libc = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
