[package]
name = "rbpf-common"
version = "0.1.1"
edition = "2024"
license = "MIT"

[features]
default = []
user = ["aya", "serde", "yaml-rust2", "rand", "poem-openapi", "libc", "std"]
std = []

[dependencies]
aya = { workspace = true, optional = true }
yaml-rust2 = { workspace = true, optional = true  }
serde = { workspace = true, optional = true  }
serde_json = { workspace = true, optional = true  }
rand =  { version = "0.9.0", optional = true }

poem-openapi = { version = "5.1.12", features = ["swagger-ui"], optional = true }
libc = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
