[package]
name = "rbpf-http"
version = "0.2.1"
edition = "2024"
license = "MIT"

[features]
default = []
user = []

[dependencies]
anyhow = { workspace = true, default-features = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"]  }
clap = { workspace = true, features = ["derive"] }
yaml-rust2 = { workspace = true }
serde_json = { workspace = true }

poem = { version = "3.1.8",features = ["websocket", "static-files"]  }
poem-openapi = { version = "5.1.12", features = ["swagger-ui", "websocket"] }
futures = "0.3.31"

rbpf-common = { path = "../rbpf-common", features=["user"]}


[build-dependencies]
anyhow = { workspace = true }


[[bin]]
name = "rbpf_http"
path = "src/main.rs"
