[package]
name = "rbpf-loader"
version = "0.2.1"
edition = "2021"

[features]
default = []
user = []

[dependencies]
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
yaml-rust2 = "0.10.1"
rand = "0.9.0"
trust-dns-resolver = "0.23.2"
poem = "3.1.8"
poem-openapi = { version = "5.1.12", features = ["swagger-ui"] }
serde = { version = "1", features = ["derive"] }
rbpf-common = { path = "../rbpf-common", features=["user"]}
nix = "0.29.0"
serde_json = "1.0.140"


[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
rbpf-ebpf = { path = "../rbpf-ebpf" }


[[bin]]
name = "rbpf_loader"
path = "src/main.rs"
