[package]
name = "rbpf-loader"
version = "0.2.1"
edition = "2024"
license = "MIT"

[features]
default = ["embed-ebpf"]
embed-ebpf = []
user = []

[dependencies]
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
yaml-rust2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
trust-dns-resolver = "0.23.2"
nix = "0.29.0"


rbpf-common = { path = "../rbpf-common", features=["user"]}

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
# rbpf-ebpf = { path = "../rbpf-ebpf" }


[[bin]]
name = "rbpf_loader"
path = "src/main.rs"
