[package]
name = "rbpf"
version = "0.2.0"
edition = "2021"

[features]
default = []
user = []

[dependencies]
anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal", "fs", "time", "sync"] }
clap = { workspace = true, features = ["derive"] }
yaml-rust2 = "0.10.1"
rand = "0.9.0"
trust-dns-resolver = "0.23.2"
rbpf-common = { path = "../rbpf-common", features=["user"]}

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
rbpf-ebpf = { path = "../rbpf-ebpf" }

[[bin]]
name = "rbpf"
path = "src/main.rs"
